[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Teaching.gd" type="Script" id=1]
[ext_resource path="res://assets/Background.png" type="Texture" id=2]
[ext_resource path="res://scenes/Papelzinho.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/start-button.png" type="Texture" id=4]
[ext_resource path="res://scenes/cans/can.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Comfortaa-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("lata:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 75
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 75
font_data = ExtResource( 6 )

[node name="Teaching" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 421.935, 432.209 )
scale = Vector2( 0.75, 0.75 )

[node name="button" type="Node2D" parent="."]
editor/display_folded = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="button"]
position = Vector2( 2650, 250 )
scale = Vector2( 0.485, 0.485 )
normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="button"]
anims/fadeIn = SubResource( 1 )
anims/fadeOut = SubResource( 2 )

[node name="lata" parent="." instance=ExtResource( 5 )]
visible = false
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 2870, 1760 )
scale = Vector2( 1.5, 1.5 )
type = "paper"

[node name="posItem2" type="Position2D" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1730, 1520 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="posItem2"]
anims/fadeIn = SubResource( 3 )
anims/fadeOut = SubResource( 4 )

[node name="posItem3" type="Position2D" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1040, 2020 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="posItem3"]
anims/fadeIn = SubResource( 5 )
anims/fadeOut = SubResource( 6 )

[node name="posItem1" type="Position2D" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 350, 1520 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="posItem1"]
anims/fadeIn = SubResource( 7 )
anims/fadeOut = SubResource( 8 )

[node name="animGeral" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 9 )

[node name="TouchScreenButton2" type="Button" parent="."]
margin_left = 3130.0
margin_top = 30.0
margin_right = 3800.0
margin_bottom = 121.0
focus_mode = 0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0.121569, 0.133333, 0.356863, 1 )
enabled_focus_mode = 0
flat = true

[node name="Label" type="Label" parent="TouchScreenButton2"]
margin_right = 670.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PULAR TUTORIAL"
[connection signal="released" from="button/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="button_up" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_button_up"]
